Fix the split button alignment (see #5857)
Description
-----------

Fixes #5853

Commits
-------

493fa5b6 Fix the split button alignment

--- a/core-bundle/contao/themes/flexible/basic.css
+++ b/core-bundle/contao/themes/flexible/basic.css
@@ -785,7 +785,6 @@ a.tl_submit {
 	display: inline-block;
 	position: relative;
 	z-index: 1;
-	vertical-align: middle;
 }
 
 .split-button ul, .split-button li {
